# legion-stage-ios

./: .gitignore  CMakeLists.txt  deploy-ipad.sh  deploy-testflight.sh
build-ios/: CMakeCache.txt  cmake_install.cmake
build-ios-sim/: CMakeCache.txt  cmake_install.cmake
build-ios-sim/CMakeScripts/: ReRunCMake.make
build-ios-sim/Sequencer.xcodeproj/: project.pbxproj
build-ios-sim/Sequencer_artefacts/JuceLibraryCode/: Info.txt  JuceHeader.h
build-ios-sim/Sequencer_artefacts/JuceLibraryCode/Release/: Defs.txt
build-ios-sim/Sequencer_artefacts/JuceLibraryCode/Sequencer/: Info.plist
build-ios-sim/Sequencer_artefacts/Release/Legion Stage.app/: Info.plist
build-ios-sim/libs/JUCE/: cmake_install.cmake
build-ios-sim/libs/JUCE/CMakeScripts/: ReRunCMake.make
build-ios-sim/libs/JUCE/JUCE.xcodeproj/: project.pbxproj
build-ios-sim/libs/JUCE/modules/: cmake_install.cmake
build-ios-sim/libs/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  cmake_install.cmake
build-ios-sim/libs/JUCE/tools/CMakeScripts/: ReRunCMake.make
build-ios-sim/libs/JUCE/tools/JUCE.xcodeproj/: project.pbxproj
build-ios-sim/libs/JUCE/tools/modules/: cmake_install.cmake
build-ios/CMakeScripts/: ReRunCMake.make
build-ios/Sequencer.xcodeproj/: project.pbxproj
build-ios/Sequencer.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
build-ios/Sequencer.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
build-ios/Sequencer_artefacts/JuceLibraryCode/: Info.txt
build-ios/Sequencer_artefacts/JuceLibraryCode/Debug/: Defs.txt
build-ios/Sequencer_artefacts/JuceLibraryCode/Sequencer/: Info.plist
build-ios/Sequencer_artefacts/Release/Legion Stage.app/: Info.plist
build-ios/libs/JUCE/: JUCEExportConfig.cmake  cmake_install.cmake
build-ios/libs/JUCE/CMakeScripts/: ReRunCMake.make
build-ios/libs/JUCE/JUCE.xcodeproj/: project.pbxproj
build-ios/libs/JUCE/modules/: cmake_install.cmake
build-ios/libs/JUCE/tools/: CMakeCache.txt  JUCEToolsExport.cmake  cmake_install.cmake
build-ios/libs/JUCE/tools/CMakeScripts/: ReRunCMake.make
build-ios/libs/JUCE/tools/JUCE.xcodeproj/: project.pbxproj
build-ios/libs/JUCE/tools/modules/: cmake_install.cmake
resources/: LaunchScreen.plist  Legion Stage.entitlements
resources/LaunchScreen.storyboardc/: Info.plist
src/: AUPresetHelper.h  AUPresetHelper.mm  AUScanner.h  AUScanner.mm  AlcantaraLookAndFeel.h  AnalyzerComponent.h  Arpeggiator.h  ArrangerMinimapComponent.h  AudioExporter.h  BioResonanceComponent.h  BuiltinJuno60Processor.h  BuiltinSamplerProcessor.h  CausticShaders.metal  ChordDetector.h  ClipPlayerNode.cpp  ClipPlayerNode.h  CrashLog.h  CyberpunkLookAndFeel.h  DawLookAndFeel.h  DawTheme.h  DeviceMotion.h  DeviceMotion.mm  FileAccessHelper.h  FileAccessHelper.mm  FluidSimComponent.h  GForceComponent.h  GainProcessor.cpp  GainProcessor.h  GeissComponent.h  GlassOverlayLookAndFeel.h  HeartRateManager.h  HeartRateManager.mm  HeartbeatComponent.h  IoniqDarkLookAndFeel.h  IoniqForestLookAndFeel.h  IoniqLookAndFeel.h  KeyLab88LookAndFeel.h  KeyLab88Mk2Controller.cpp  KeyLab88Mk2Controller.h  KeystageLookAndFeel.h  (+41 more)
src/Juno60/: Arpeggiator.cpp  Arpeggiator.h  Chorus.cpp  Chorus.h  Envelope.cpp  Envelope.h  Juno60Editor.cpp  Juno60Editor.h  JunoVoice.cpp  JunoVoice.h  LFO.cpp  LFO.h  LadderFilter.cpp  LadderFilter.h  Oscillator.cpp  Oscillator.h  Presets.h  VoiceManager.cpp  VoiceManager.h
